# ppm2fli

./: CHANGES  CMakeLists.txt  Makefile  README  abrun.c  acolor.c  adelta.c  afbm.c  aframe.c  aimage.c  ainput.c  alc.c  alist.c  amain.c  aoctree.c  appm.c  apro.h  ppm2fli.1  umain.c  unflick.1  uoutput.c  upro.h  uunfli.c  uwchunks.c
